# physiomotion4d

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  statistics.md  status.json
.agents/: .gitignore
.agents/agents/: architecture.md  implementation.md  testing.md
.claude/: settings.json
.claude/agents/: architecture.md  docs.md  implementation.md  testing.md
.cursor/rules/: project-standards.mdc
.github/scripts/: build_dashboard.py
.github/workflows/: README.md  ci.yml  docs.yml  nightly-health.yml  release.yml  test-slow.yml  tests.yml
data/: README.md
data/CHOP-Valve4D/: .gitignore
data/DirLab-4DCT/: .gitignore  Convert4DCTToMHD.ipynb  citations.txt  reading_img_files.url
data/KCL-Heart-Model/: .gitignore  1-input_meshes_to_input_surfaces.ipynb  2-input_surfaces_to_surfaces_aligned.ipynb  3-run_slicersalt_registration_based_correspondence.md  4-surfaces_aligned_correspond_to_pca_inputs.ipynb  5-run_slicersalt_population_analysis.md  6-create_template_mask.ipynb  README.md  citation.txt  group.csv
data/Slicer-Heart-CT/: download_and_convert.ipynb  download_and_convert.py
data/test/: .gitignore
docs/: API_MAP.md  BUILD_AND_PREVIEW.md  DOCUMENTATION_SETUP.md  DOCUMENTATION_STRUCTURE.md  DOCUMENTATION_TREE.txt  DOCUMENTATION_UPDATE_SUMMARY.md  LOGGING_API_REFERENCE.md  Makefile  PYPI_RELEASE_GUIDE.md  QUICK_REFERENCE.md  README.md  ants_initial_transform_guide.md  architecture.rst  changelog.rst  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  installation.rst  quickstart.rst  references.rst  testing.rst  troubleshooting.rst  tutorials.rst
docs/_static/: custom.css
docs/api/: base.rst  core.rst  index.rst  registration.rst  segmentation.rst  utilities.rst  workflows.rst
docs/cli_scripts/: 4dct_reconstruction.rst  best_practices.rst  brain_vessel_modeling.rst  byod_tutorials.rst  create_statistical_model.rst  fit_statistical_model_to_patient.rst  heart_gated_ct.rst  heart_model_to_patient.rst  lung_gated_ct.rst  overview.rst  vtk_to_usd.rst
docs/developer/: architecture.rst  core.rst  extending.rst  registration_images.rst  registration_models.rst  segmentation.rst  transform_conventions.rst  usd_generation.rst  utilities.rst  workflows.rst
docs/tutorials/: basic_workflow.rst  colormap_rendering.rst  custom_segmentation.rst  image_registration.rst  model_to_image_registration.rst  vtk_to_usd.rst
docs/user_guide/: heart_gated_ct.rst  logging.rst  lung_4dct.rst  registration.rst  segmentation.rst  usd_conversion.rst  visualization.rst
experiments/: .gitignore  README.md
experiments/Colormap-VTK_To_USD/: colormap_vtk_to_usd.ipynb  colormap_vtk_to_usd.py
experiments/Convert_VTK_To_USD/: convert_chop_alterra_valve_to_usd.ipynb  convert_chop_alterra_valve_to_usd.py  convert_chop_heart_vtk_to_usd.ipynb  convert_chop_tpv25_valve_to_usd.ipynb  convert_chop_tpv25_valve_to_usd.py  convert_chop_valve_to_usd.ipynb  convert_vtk_to_usd_using_class.ipynb  convert_vtk_to_usd_using_class.py
experiments/DisplacementField_To_USD/: displacement_field_to_usd.ipynb
experiments/Heart-Create_Statistical_Model/: .gitignore  1-input_meshes_to_input_surfaces.ipynb  1-input_meshes_to_input_surfaces.py  2-input_surfaces_to_surfaces_aligned.ipynb  2-input_surfaces_to_surfaces_aligned.py  3-registration_based_correspondence.ipynb  3-registration_based_correspondence.py  4-surfaces_aligned_correspond_to_pca_inputs.ipynb  4-surfaces_aligned_correspond_to_pca_inputs.py  5-compute_pca_model.ipynb  5-compute_pca_model.py  README.md
experiments/Heart-GatedCT_To_USD/: 0-download_and_convert_4d_to_3d.ipynb  0-download_and_convert_4d_to_3d.py  1-register_images.ipynb  1-register_images.py  2-generate_segmentation.ipynb  2-generate_segmentation.py  3-transform_dynamic_and_static_contours.ipynb  3-transform_dynamic_and_static_contours.py  4-merge_dynamic_and_static_usd.ipynb  test_compare_registration_speed.ipynb  test_compare_registration_speed.py  test_vista3d_class.ipynb  test_vista3d_inMem.ipynb
experiments/Heart-Model_To_Patient/: heart_model_to_model_icp_itk.ipynb  (+3 more)
scripts/: README.md  convert_heart_gated_ct_to_usd.py  heart_gated_ct_to_usd.py  register_heart_model_to_patient.py
tests/: .gitignore  EXPERIMENT_FLAG_USAGE.md  EXPERIMENT_TESTS_GUIDE.md  EXPERIMENT_TESTS_SUMMARY.md  GITHUB_WORKFLOWS.md  PARALLEL_EXECUTION_GUIDE.md  README.md  TESTING_GUIDE.md  __init__.py  conftest.py  test_anatomy_taxonomy.py  test_cli_smoke.py  test_contour_tools.py  test_convert_nrrd_4d_to_3d.py  test_convert_vtk_4d_to_usd_polymesh.py  test_convert_vtk_to_usd.py  test_convert_vtk_to_usd_polymesh.py  test_download_heart_data.py  test_experiments.py  test_image_tools.py  test_labelmap_tools.py  test_register_images_ants.py  test_register_images_chain.py  test_register_images_greedy.py  test_register_images_greedy_icon.py  test_register_images_icon.py  test_register_time_series_images.py  test_segment_chest_total_segmentator.py  test_segment_chest_vista_3d.py  test_segment_heart_simpleware.py  test_segment_heart_simpleware_trimmed_branches.py  test_transform_tools.py  test_tutorials.py  test_usd_merge.py  test_usd_time_preservation.py  test_vtk_to_usd_library.py  test_workflow_convert_image_to_usd.py  test_workflow_convert_image_to_vtk.py  test_workflow_fine_tune_icon_registration.py  test_workflow_fit_statistical_model_to_patient.py  (+1 more)
tutorials/: README.md  tutorial_01_heart_gated_ct_to_usd.py  tutorial_02_ct_to_vtk.py  tutorial_03_create_statistical_model.py  tutorial_03_fit_statistical_model_to_patient.py  tutorial_04_create_statistical_model.py  tutorial_04_fit_statistical_model_to_patient.py  tutorial_05_vtk_to_usd.py  tutorial_06_reconstruct_highres_4d_ct.py  tutorial_07_dirlab_pca_model.py  tutorial_08_cardiac_fit_model.py  tutorial_08_dirlab_pca_time_series.py  tutorial_09_physicsnemo_mesh_stage_model.py
utils/: ai_agent_github_reviews.py  claude_github_reviews.py  generate_api_map.py  prepare_notebooks_for_commit.py  setup_feature_worktree.py
(+192 files in other folders)
