[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physiomotion4d"
version = "2025.05.0"
description = "Medical imaging package for generating anatomic models in Omniverse with physiological motion from 4D medical images"
authors = [
    {name = "Stephen R. Aylward", email = "saylward@nvidia.com"}
]
maintainers = [
    {name = "Stephen R. Aylward", email = "saylward@nvidia.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
keywords = [
    "medical-imaging", 
    "4d-ct", 
    "cardiac-imaging", 
    "lung-imaging", 
    "omniverse", 
    "usd", 
    "monai", 
    "segmentation", 
    "registration",
    "deformable-registration",
    "image-registration",
    "model-registration",
    "visualization",
    "ai",
    "deep-learning",
    "totalsegmentator",
    "vista-3d",
    "icon",
    "ants",
    "physiological-motion",
    "4d-visualization"
]
dependencies = [
    # Core medical imaging
    "itk>=5.3.0",
    "itk-tubetk>=1.4.0",
    "nibabel>=4.0.0",
    "numpy>=1.21.0",
    "pynrrd>=1.0.0",
    "vtk>=9.2.0",
    
    # AI/ML and segmentation
    "monai>=1.3.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.21.0",
    "totalsegmentator>=2.0.0",
    
    # Registration
    "antspyx>=0.4.0",
    "icon-registration>=1.0.0",
    "unigradicon>=1.0.0",
    
    # Visualization and USD
    "pyvista[all]>=0.42.0",
    "usd-core>=23.11",
    "trimesh>=4.0.0",
    
    # Utilities
    "matplotlib>=3.5.0",
    "jupyterlab>=4.0.0",
    "typing-extensions>=4.0.0",
    "cupy-cuda12x>=13.6.0",

]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" }
]
torchvision = [
  { index = "pytorch-cu126" }
]
torchaudio = [
  { index = "pytorch-cu126" }
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.optional-dependencies]
nim = [
    # Cloud and data handling
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-cloud-storage>=2.0.0",
]

dev = [
    "black>=23.0.0",
    "bumpver>=2023.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pylint>=2.15.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    # Sphinx core and theme
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    
    # Sphinx extensions
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=4.0.0",
    
    # Additional dependencies
    "linkify-it-py>=2.0.0",
    "uc-micro-py>=1.0.1",
    "markdown-it-py>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "coverage[toml]>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/aylward/PhysioMotion4d"
Documentation = "https://github.com/aylward/PhysioMotion4d/blob/main/README.md"
Repository = "https://github.com/aylward/PhysioMotion4d.git"
"Bug Tracker" = "https://github.com/aylward/PhysioMotion4d/issues"
Changelog = "https://github.com/aylward/PhysioMotion4d/blob/main/CHANGELOG.md"
"Author LinkedIn" = "https://www.linkedin.com/in/stephenaylward"
"Author Google Scholar" = "https://scholar.google.com/citations?user=u1UdL4oAAAAJ&hl"

[project.scripts]
physiomotion4d = "physiomotion4d.__main__:main"
physiomotion4d-heart-gated-ct = "physiomotion4d.workflow_convert_heart_gated_ct_to_usd:main"
physiomotion4d-register-heart-model = "physiomotion4d.workflow_register_heart_model_to_patient:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpver]
current_version = "2025.05.0"
version_pattern = "YYYY.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/physiomotion4d/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | \.eggs
    | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache"
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.pylint.main]
ignore-paths = [
    "^.*test.*$",
    "^.*__pycache__.*$",
    "^.*\\.egg-info.*$"
]
extension-pkg-allow-list = ["itk"]

[tool.pylint.typecheck]
# ITK, VTK, and similar libraries generate classes dynamically
generated-members = ["itk.*", "vtk.*", "Usd.*", "UsdGeom.*", "Gf.*"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "duplicate-code"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "itk.*",
    "vtk.*",
    "pyvista.*",
    "nibabel.*",
    "monai.*",
    "totalsegmentator.*",
    "icon_registration.*",
    "unigradicon.*",
    "pynrrd.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=physiomotion4d",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, multiple components)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU/CUDA support",
    "requires_data: marks tests that require external data download"
]
timeout = 900

[tool.coverage.run]
source = ["src/physiomotion4d"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
# Enable comment formatting and line wrapping
docstring-code-format = true
docstring-code-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101"]
