[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physiomotion4d"
version = "2025.05.0"
description = "Medical imaging package for generating anatomic models in Omniverse with physiological motion from 4D medical images"
authors = [
    {name = "Stephen R. Aylward", email = "saylward@nvidia.com"}
]
maintainers = [
    {name = "Stephen R. Aylward", email = "saylward@nvidia.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
keywords = [
    "medical-imaging",
    "4d-ct",
    "cardiac-imaging",
    "lung-imaging",
    "omniverse",
    "usd",
    "monai",
    "segmentation",
    "registration",
    "deformable-registration",
    "image-registration",
    "model-registration",
    "visualization",
    "ai",
    "deep-learning",
    "totalsegmentator",
    "vista-3d",
    "icon",
    "ants",
    "physiological-motion",
    "4d-visualization"
]
dependencies = [
    # Core medical imaging
    "itk>=5.3.0",
    "itk-tubetk>=1.4.0",
    "nibabel>=4.0.0",
    "numpy>=1.21.0",
    "pynrrd>=1.0.0",
    "vtk>=9.2.0",

    # AI/ML and segmentation
    "monai>=1.3.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.21.0,<5.0.0",
    "totalsegmentator>=2.0.0",

    # Registration
    "antspyx>=0.4.0",
    "icon-registration>=1.0.0",
    "unigradicon>=1.0.0",

    # Visualization and USD
    "pyvista[all]>=0.42.0",
    "usd-core>=23.11",
    "trimesh>=4.0.0",

    # Utilities
    "matplotlib>=3.5.0",
    "jupyterlab>=4.0.0",
    "typing-extensions>=4.0.0",
    "cupy-cuda12x>=13.6.0",

]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" }
]
torchvision = [
  { index = "pytorch-cu130" }
]
torchaudio = [
  { index = "pytorch-cu130" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
nim = [
    # Cloud and data handling
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-cloud-storage>=2.0.0",
]

dev = [
    "bumpver>=2023.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "scipy-stubs>=1.14.0.0,<1.16.0.0",
    "types-requests>=2.32.0.0",
]
docs = [
    # Sphinx core and theme
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",

    # Sphinx extensions
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=4.0.0",

    # Docutils 0.22 removed some node attributes (e.g. "backrefs") that
    # sphinx-tabs expects, causing a KeyError during builds.
    "docutils<0.22",

    # Additional dependencies
    "linkify-it-py>=2.0.0",
    "uc-micro-py>=1.0.1",
    "markdown-it-py>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "coverage[toml]>=7.0.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/aylward/PhysioMotion4d"
Documentation = "https://github.com/aylward/PhysioMotion4d/blob/main/README.md"
Repository = "https://github.com/aylward/PhysioMotion4d.git"
"Bug Tracker" = "https://github.com/aylward/PhysioMotion4d/issues"
Changelog = "https://github.com/aylward/PhysioMotion4d/blob/main/CHANGELOG.md"
"Author LinkedIn" = "https://www.linkedin.com/in/stephenaylward"
"Author Google Scholar" = "https://scholar.google.com/citations?user=u1UdL4oAAAAJ&hl"

[project.scripts]
# CLI commands installed via pip
# Entry points reference the main() functions in the cli submodule
physiomotion4d-heart-gated-ct = "physiomotion4d.cli.convert_heart_gated_ct_to_usd:main"
physiomotion4d-create-statistical-model = "physiomotion4d.cli.create_statistical_model:main"
physiomotion4d-fit-statistical-model-to-patient = "physiomotion4d.cli.fit_statistical_model_to_patient:main"
physiomotion4d-visualize-pca-modes = "physiomotion4d.cli.visualize_pca_modes:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpver]
current_version = "2025.05.0"
version_pattern = "YYYY.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag_message = "{new_version}"
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/physiomotion4d/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = '(?x)(^src[/\\\\]physiomotion4d[/\\\\]network_weights[/\\\\]vista3d[/\\\\])'
# Third-party libs (itk, pyvista, pxr, vtk, simpleware, etc.) have no stubs
disable_error_code = ["import-not-found", "import-untyped"]

# When type-checking our package, ignore missing imports for third-party libs.
# Override applies to the module being checked (physiomotion4d.*).
[[tool.mypy.overrides]]
module = ["physiomotion4d", "physiomotion4d.*"]
ignore_missing_imports = true

[tool.pyright]
# Third-party packages (e.g. pyvista) are in dependencies but may have no stubs;
# do not report import-not-found so analysis matches mypy overrides above.
reportMissingImports = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-W", "always",
    "--cov=physiomotion4d",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, multiple components)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU/CUDA support",
    "requires_data: marks tests that require external data download",
    "experiment: marks tests that run experiment notebooks (extremely slow, manual only)",
    "xdist_group: marks tests to run in the same pytest-xdist worker (prevents parallel conflicts)"
]
timeout = 900

[tool.coverage.run]
source = ["src/physiomotion4d"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C90",   # mccabe complexity
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint rules
]
ignore = [
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S101",    # use of assert (needed for pytest)
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concatenation (conflicts with formatter)
    "UP007",   # use Optional[] instead of | for union with None (itk.Image compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["S101", "PLR2004", "ARG001", "ARG002"]
"tests/*.py" = ["S101", "PLR2004", "ARG001", "ARG002"]
"experiments/*.py" = ["T201", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["physiomotion4d"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88
